--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 ---
 layout: post-index
 title: Latest Posts
-description: "Describe this nonsense."
+description: "ZENVENT"
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
 image:
   feature: abstract-1.png
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
 ---
 
 {% for post in paginator.posts %}
