--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: "ZENVENT"
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
 image:
-  feature: abstract-1.png
+  feature: title.png
 ---
 
 {% for post in paginator.posts %}
