--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ sitemap:
 					<a href="{{ post.url | absolute_url }}" class="image fit">
 						<img src="{{ post.image | absolute_url }}" alt="" />
 					</a>
-					<header class="major">
+					<header>
 							<h2>
 									<a href="{{ post.url | absolute_url }}">{{ post.title }}</a>
 							</h2>
