--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ sitemap:
 	
 				<!-- Featured Post -->
 				<article class="post featured">
-						<div class="postCard" onclick="location.href='{{ post.url | absolute_url }}';" style="cursor: pointer;">
+					<div class="postCard" onclick="location.href='{{ post.url | absolute_url }}';" style="cursor: pointer; margin: 2rem;">
 						{% assign post = site.posts.first %}
 					
 					<a href="{{ post.url | absolute_url }}" class="image fit">
